--- a/Inżynierka/nazwa_inżynierki/Backend/Farmino.API/Farmino.API.csproj
+++ b/Inżynierka/nazwa_inżynierki/Backend/Farmino.API/Farmino.API.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Farmino.Service\Farmino.Service.csproj" />
+  </ItemGroup>
+
 
 </Project>
