--- a/Inżynierka/nazwa_inżynierki/Backend/Farmino.Service/Farmino.Service.csproj
+++ b/Inżynierka/nazwa_inżynierki/Backend/Farmino.Service/Farmino.Service.csproj
@@ -17,7 +17,7 @@
     <Folder Include="Commands\" />
     <Folder Include="IoC\" />
     <Folder Include="ORM\" />
-    <Folder Include="Service\" />
+    <Folder Include="Service\Interfaces\" />
   </ItemGroup>
 
   <ItemGroup>
