--- a/Inżynierka/nazwa_inżynierki/Backend/Farmino.API/Farmino.API.csproj
+++ b/Inżynierka/nazwa_inżynierki/Backend/Farmino.API/Farmino.API.csproj
@@ -8,5 +8,9 @@
     <ProjectReference Include="..\Farmino.Service\Farmino.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
