--- a/Inżynierka/nazwa_inżynierki/Backend/Farmino.Service/Farmino.Service.csproj
+++ b/Inżynierka/nazwa_inżynierki/Backend/Farmino.Service/Farmino.Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -13,7 +13,6 @@
   <ItemGroup>
     <Folder Include="Handlers\" />
     <Folder Include="DTO\" />
-    <Folder Include="Mapper\" />
     <Folder Include="Commands\" />
     <Folder Include="IoC\" />
   </ItemGroup>
@@ -22,6 +21,7 @@
     <PackageReference Include="Autofac" Version="6.0.0" />
     <PackageReference Include="AutoMapper" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
   </ItemGroup>
 
   <ItemGroup>
