--- a/Inżynierka/nazwa_inżynierki/Backend/Farmino.API/Farmino.API.csproj
+++ b/Inżynierka/nazwa_inżynierki/Backend/Farmino.API/Farmino.API.csproj
@@ -12,5 +12,9 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+  </ItemGroup>
+
 
 </Project>
