--- a/Inżynierka/nazwa_inżynierki/Backend/Farmino.Service/Farmino.Service.csproj
+++ b/Inżynierka/nazwa_inżynierki/Backend/Farmino.Service/Farmino.Service.csproj
@@ -12,7 +12,6 @@
 
   <ItemGroup>
     <Folder Include="Handlers\" />
-    <Folder Include="DTO\" />
     <Folder Include="Commands\" />
     <Folder Include="IoC\" />
   </ItemGroup>
@@ -20,6 +19,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.0.0" />
     <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
   </ItemGroup>
