--- a/Inżynierka/nazwa_inżynierki/Backend/Farmino.Service/Farmino.Service.csproj
+++ b/Inżynierka/nazwa_inżynierki/Backend/Farmino.Service/Farmino.Service.csproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <Folder Include="Handlers\" />
     <Folder Include="Commands\" />
-    <Folder Include="IoC\" />
+    <Folder Include="IoC\Modules\" />
   </ItemGroup>
 
   <ItemGroup>
