--- a/Inżynierka/nazwa_inżynierki/Backend/Farmino.API/appsettings.json
+++ b/Inżynierka/nazwa_inżynierki/Backend/Farmino.API/appsettings.json
@@ -4,7 +4,9 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-    },
+    }
+  },
+  "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-79T8SJO\\DAMIANEK; User Id=sa; Password=abcd1234; Database=FarminoDb"
   },
   "AllowedHosts": "*"
