--- a/Inżynierka/Farmino/Backend/Farmino.API/Properties/launchSettings.json
+++ b/Inżynierka/Farmino/Backend/Farmino.API/Properties/launchSettings.json
@@ -3,14 +3,15 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56313",
-      "sslPort": 44336
+      "applicationUrl": "http://localhost:49822",
+      "sslPort": 0
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
+      "launchBrowser": true,
       "launchUrl": "weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +23,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5006;http://localhost:5005"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
