--- a/Inżynierka/Farmino/Backend/Farmino.API/appsettings.json
+++ b/Inżynierka/Farmino/Backend/Farmino.API/appsettings.json
@@ -9,5 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-79T8SJO\\DAMIANEK; User Id=sa; Password=abcd1234; Database=FarminoDb"
   },
+  "TokenSettings": {
+    "Key": "SaXZrewQTuEWQyiCSAafQWEqwfewyeQWewtrqwRTYur5eWEqwqsDazz",
+    "Issuer": "https://localhost:48000"
+  },
   "AllowedHosts": "*"
 }
