--- a/Inżynierka/Farmino/Backend/Farmino.API/appsettings.json
+++ b/Inżynierka/Farmino/Backend/Farmino.API/appsettings.json
@@ -11,7 +11,8 @@
   },
   "TokenSettings": {
     "Key": "SaXZrewQTuEWQyiCSAafQWEqwfewyeQWewtrqwRTYur5eWEqwqsDazz",
-    "Issuer": "https://localhost:48000"
+    "Issuer": "https://localhost:48000",
+    "ExpireTime": 1
   },
   "AllowedHosts": "*"
 }
