--- a/Inżynierka/Farmino/Backend/Farmino.API/appsettings.json
+++ b/Inżynierka/Farmino/Backend/Farmino.API/appsettings.json
@@ -9,10 +9,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-79T8SJO\\DAMIANEK; User Id=sa; Password=abcd1234; Database=FarminoDb"
   },
-  "TokenSettings": {
-    "Key": "SaXZrewQTuEWQyiCSAafQWEqwfewyeQWewtrqwRTYur5eWEqwqsDazz",
-    "Issuer": "https://localhost:48000",
-    "ExpireTime": 1
+  "Security": {
+      "Key": "SaXZrewQTuEWQyiCSAafQWEqwfewyeQWewtrqwRTYur5eWEqwqsDazz",
+      "Issuer": "https://localhost:48000",
+      "ExpireTime": 5
   },
   "AllowedHosts": "*"
 }
