--- a/Inżynierka/Farmino/Backend/Farmino.UnitTests/Farmino.UnitTests.csproj
+++ b/Inżynierka/Farmino/Backend/Farmino.UnitTests/Farmino.UnitTests.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Farmino.Data\Farmino.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Entities\" />
+  </ItemGroup>
+
 </Project>
