--- a/Inżynierka/Farmino/Backend/Farmino.UnitTests/Farmino.UnitTests.csproj
+++ b/Inżynierka/Farmino/Backend/Farmino.UnitTests/Farmino.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Farmino.Data\Farmino.Data.csproj" />
+    <ProjectReference Include="..\Farmino.Service\Farmino.Service.csproj" />
   </ItemGroup>
 
 </Project>
