--- a/Inżynierka/Farmino/Frontend/package.json
+++ b/Inżynierka/Farmino/Frontend/package.json
@@ -11,8 +11,8 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-icons": "^2.0.0",
     "vue-router": "^3.4.9",
+    "vue-unicons": "^2.3.0",
     "vuelidate": "^0.7.5",
     "vuex": "^3.5.1"
   },
