--- a/Inżynierka/Farmino/Backend/Farmino.Infrastructure/Farmino.Infrastructure.csproj
+++ b/Inżynierka/Farmino/Backend/Farmino.Infrastructure/Farmino.Infrastructure.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.1">
@@ -17,10 +18,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Farmino.Data\Farmino.Data.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ImageConversion\" />
   </ItemGroup>
 
 </Project>
