--- a/Inżynierka/Farmino/Backend/Farmino.API/appsettings.json
+++ b/Inżynierka/Farmino/Backend/Farmino.API/appsettings.json
@@ -10,9 +10,12 @@
     "DefaultConnection": "Server=DESKTOP-79T8SJO\\DAMIANEK; User Id=sa; Password=abcd1234; Database=FarminoDb"
   },
   "Security": {
-      "Key": "SaXZrewQTuEWQyiCSAafQWEqwfewyeQWewtrqwRTYur5eWEqwqsDazz",
-      "Issuer": "https://localhost:48000",
-      "ExpireTime": 5
+    "Key": "SaXZrewQTuEWQyiCSAafQWEqwfewyeQWewtrqwRTYur5eWEqwqsDazz",
+    "Issuer": "https://localhost:48000",
+    "ExpireTime": 5
+  },
+  "GeolocationApi": {
+    "key": "pk.4ec8f781c1d03c710600d8c4f0482c62"
   },
   "AllowedHosts": "*"
 }
