--- a/Inżynierka/Farmino/Backend/Farmino.Service/Farmino.Service.csproj
+++ b/Inżynierka/Farmino/Backend/Farmino.Service/Farmino.Service.csproj
@@ -19,11 +19,11 @@
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="DTO\Auctioner\" />
-    <Folder Include="DTO\Customer\" />
     <Folder Include="DTO\Participant\" />
   </ItemGroup>
 
