--- a/Inżynierka/Farmino/Frontend/package.json
+++ b/Inżynierka/Farmino/Frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.1.0",
     "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
