--- a/Inżynierka/Farmino/Backend/Farmino.API/appsettings.json
+++ b/Inżynierka/Farmino/Backend/Farmino.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-79T8SJO\\DAMIANEK; User Id=sa; Password=abcd1234; Database=FarminoDb"
+    "DefaultConnection": "Server=DESKTOP-79T8SJO; User Id=sa; Password=abcd1234; Database=FarminoDb"
   },
   "Security": {
     "Key": "SaXZrewQTuEWQyiCSAafQWEqwfewyeQWewtrqwRTYur5eWEqwqsDazz",
